added api to fetch events by month
